[metadata]
# Requires at least setuptools 39.2.0 (file support in version)
# see https://setuptools.readthedocs.io/en/latest/index.html

version = file: ./src/nptsne/_version.txt
name = nptsne
url = https://biovault.github.io/nptsne
description = The nptsne package is designed to export a number of python classes that wrap tSNE and HSNE
long_description = file: ./DESCRIPTION.md
long_description_content_type = text/markdown
keywords = tSNE HSNE embedding GPU
author = Nicola Pezzotti, Thomas Höllt, Julian Thijssen, Baldur van Lew
author_email = b.van_lew@lumc.nl
license = Apache-2
license_files = LICENSE.txt

    
project_urls = 
    Tracker = https://github.com/biovault/nptsne/issues
    Documentation = https://bldrvnlw.readthedocs.io
    Source = https://github.com/biovault/nptsne

        
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: C++
    
[options]
zip_safe = False
include_package_data = True
install_requires = numpy >= "1.11.0"; setuptools >= "39.2.0"
# Collect the python packages (marked with __init__.py)
package_dir=
    =src
packages=find:


[options.packages.find]
where=src